[gd_scene load_steps=6 format=2]

[ext_resource path="res://Spipdorp.glb" type="PackedScene" id=1]
[ext_resource path="res://Spatial.gd" type="Script" id=2]
[ext_resource path="res://Target.gd" type="Script" id=3]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="Animation" id=2]
length = 1.5
loop = true

[node name="Spider" type="Spatial"]
script = ExtResource( 2 )

[node name="SpiderMesh" parent="." instance=ExtResource( 1 )]

[node name="BackLeftLeg" parent="SpiderMesh/Skele/Skeleton" index="0"]
transform = Transform( 1, 0, 0, 0, 1, -1.42109e-14, 0, 1.42109e-14, 1, 0, 0, 0 )

[node name="FrontRightLegIK" type="SkeletonIK" parent="SpiderMesh/Skele/Skeleton" index="4" groups=[
"IK",
]]
process_priority = 1
root_bone = "front_right_leg"
tip_bone = "front_right_target"
target_node = NodePath("../../../../targets/frontRightLegTarget/position")

[node name="FrontLeftLegIK" type="SkeletonIK" parent="SpiderMesh/Skele/Skeleton" index="5" groups=[
"IK",
]]
process_priority = 1
root_bone = "front_left_leg"
tip_bone = "front_left_target"
target_node = NodePath("../../../../targets/frontLeftLegTarget/position")

[node name="BackRightLegIK" type="SkeletonIK" parent="SpiderMesh/Skele/Skeleton" index="6" groups=[
"IK",
]]
process_priority = 1
root_bone = "back_right_leg"
tip_bone = "back_right_target"
target_node = NodePath("../../../../targets/backRightLegTarget/position")

[node name="BackLeftLegIK" type="SkeletonIK" parent="SpiderMesh/Skele/Skeleton" index="7" groups=[
"IK",
]]
process_priority = 1
root_bone = "back_left_leg"
tip_bone = "back_left_target"
target_node = NodePath("../../../../targets/backLeftLegTarget/position")

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.999419, 0, 0.0340968, 0.0199997, 0.809909, 0.586215, -0.0276153, 0.586556, -0.809438, 0.526292, 11.8907, -7.90566 )
current = true

[node name="targets" type="Spatial" parent="."]

[node name="frontRightLegTarget" type="Spatial" parent="targets" groups=[
"targets",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.207, 0, -0.567626 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="position" type="Position3D" parent="targets/frontRightLegTarget"]

[node name="RayCast" type="RayCast" parent="targets/frontRightLegTarget"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03227, 0 )
enabled = true

[node name="MeshInstance" type="MeshInstance" parent="targets/frontRightLegTarget"]
transform = Transform( 0.432213, 0, 0, 0, 0.314282, 0, 0, 0, 0.382683, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="frontLeftLegTarget" type="Spatial" parent="targets" groups=[
"targets",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.1387, 0, -0.565215 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="position" type="Position3D" parent="targets/frontLeftLegTarget"]

[node name="RayCast" type="RayCast" parent="targets/frontLeftLegTarget"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.032, 0 )
enabled = true

[node name="MeshInstance2" type="MeshInstance" parent="targets/frontLeftLegTarget"]
transform = Transform( 0.432213, 0, 0, 0, 0.314282, 0, 0, 0, 0.382683, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="backRightLegTarget" type="Spatial" parent="targets" groups=[
"targets",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.2128, 0, 0.59268 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="position" type="Position3D" parent="targets/backRightLegTarget"]

[node name="RayCast" type="RayCast" parent="targets/backRightLegTarget"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.032, 0 )
enabled = true

[node name="MeshInstance3" type="MeshInstance" parent="targets/backRightLegTarget"]
transform = Transform( 0.432213, 0, 0, 0, 0.314282, 0, 0, 0, 0.382683, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="backLeftLegTarget" type="Spatial" parent="targets" groups=[
"targets",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.2316, 0, 0.586159 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="position" type="Position3D" parent="targets/backLeftLegTarget"]

[node name="RayCast" type="RayCast" parent="targets/backLeftLegTarget"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.032, 0 )
enabled = true

[node name="MeshInstance4" type="MeshInstance" parent="targets/backLeftLegTarget"]
transform = Transform( 0.432213, 0, 0, 0, 0.314282, 0, 0, 0, 0.382683, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="goals" type="Spatial" parent="."]
transform = Transform( 1.50205, 0, 0, 0, 1.09221, 0, 0, 0, 1.32992, 0, 0, 0.308 )

[node name="frontRightLegGoal" type="Position3D" parent="goals" groups=[
"goals",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.249995 )

[node name="MeshInstance" type="MeshInstance" parent="goals/frontRightLegGoal"]
transform = Transform( 0.287749, 0, 0, 0, 0.287749, 0, 0, 0, 0.287749, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="frontLeftLegGoal" type="Position3D" parent="goals" groups=[
"goals",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.249995 )

[node name="MeshInstance4" type="MeshInstance" parent="goals/frontLeftLegGoal"]
transform = Transform( 0.287749, 0, 0, 0, 0.287749, 0, 0, 0, 0.287749, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="backRightLegGoal" type="Position3D" parent="goals" groups=[
"goals",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.249995 )

[node name="MeshInstance3" type="MeshInstance" parent="goals/backRightLegGoal"]
transform = Transform( 0.287749, 0, 0, 0, 0.287749, 0, 0, 0, 0.287749, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="backLeftLegGoal" type="Position3D" parent="goals" groups=[
"goals",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.249995 )

[node name="MeshInstance2" type="MeshInstance" parent="goals/backLeftLegGoal"]
transform = Transform( 0.287749, 0, 0, 0, 0.287749, 0, 0, 0, 0.287749, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/wiggle = SubResource( 2 )

[editable path="SpiderMesh"]
